fixed broken footer on mobile

--- a/public/global.css
+++ b/public/global.css
@@ -485,9 +485,17 @@ input:focus {
 @media only screen and (max-width: 800px) {
   #nav__list:not(#home__nav > #nav__list),
   #return-button,
-  #search,
-  footer {
+  #search {
     display: none !important;
+  }
+  #wiki {
+    grid-template-columns: 1fr !important;
+    grid-template-rows: 8rem 10fr 1fr !important;
+  }
+
+  footer {
+    grid-column: initial !important;
+    grid-row: initial !important;
   }
   #nav__logo:hover {
     transform: none;
